browser/css/jsdialogs.css
/* ... */
#mobile-wizard #selectwords,
#mobile-wizard #selectchars,
#mobile-wizard #selectcharsnospaces,
#mobile-wizard #selectcjkchars,
#mobile-wizard #docwords,
#mobile-wizard #docchars,
#mobile-wizard #doccharsnospaces,
#mobile-wizard #doccjkchars,
#mobile-wizard #docComments {
	float: right !important;
	clear: right !important;
	width: 20% !important;
	border-bottom: none !important;
	color: #636363 !important;
}

/* Dialog-specific exceptions */
#DefineNameDialog .cell.jsdialog,
#ManageNamesDialog .cell.jsdialog {
	padding-left: 0px;
}

#table-Selection .jsdialog.ui-listbox {
	margin: 8px 2px 2px;
}

#SelectSourceDialog .ui-frame-label {
	display: none;
}

#hideitems {
	border: none;
}

/* Fontwork dialog */

#FontworkGalleryDialog #ctlFavoriteswin {
	width: 400px;
	height: 400px;
}
#FontworkGalleryDialog #label1 {
	display: none;
}

/* Macros dialog */

#MacroWarnMedium label {
	max-width: 400px;
	color: var(--color-main-text);
	text-transform: none;
}

#MacroSelectorDialog #helpmacro {
	margin-bottom: 8px;
	text-transform: none;
	font-size: var(--default-font-size);
}

#MacroSelectorDialog #description {
	text-transform: none;
}

#MacroSelectorDialog #commands,
#MacroSelectorDialog #categories {
	height: 150px;
}

#MacroSelectorDialog #categories {
	box-sizing: border-box;
	border-color: transparent;
}

#MacroSelectorDialog #categories .ui-treeview-entry div.selected, #MacroSelectorDialog #categories .ui-treeview-entry, #MacroSelectorDialog #categories .ui-treeview-entry.selected {
	background-color: var(--color-background-dark);
	color: var(--color-text-dark);
}
#MacroSelectorDialog #categories .ui-treeview-entry div:hover, #MacroSelectorDialog #categories .ui-treeview-entry div.selected:hover, #MacroSelectorDialog #categories .ui-treeview-entry:hover, #MacroSelectorDialog #categories .ui-treeview-entry.selected:hover, #MacroSelectorDialog #categories .ui-treeview-entry div.selected {
	background-color: var(--color-background-darker);
	color: var(--color-text-darker);
}

/* color selector */
.has-colorpicker.unotoolbutton > .unobutton img {
	height: var(--btn-img-colorpicker-size);
}
.unotoolbutton .selected-color {
	box-sizing: border-box;
	height: var(--btn-color-colorpicker-size);
	width: calc(var(--btn-img-size) - var(--btn-padding) * 2);
	position: relative;
	border: 1px solid var(--color-border-dark);
	border-radius: 7px;
	outline: 1px solid var(--color-background-lighter);
}
#context-toolbar .unotoolbutton .selected-color {
	outline: 1px solid var(--color-border-dark-63);
}

/* dropdown arrow */
.unoarrow, .menubutton .arrow {
	width: auto !important;
	height: 0px;
	font-size: 0;
	line-height: 0;
	border: 4px solid transparent;
	border-top: 5px solid var(--color-main-text);
	display: inline-block !important;
	margin-inline-start: 3px;
	margin-top: 4px;
}

.unoarrow:not([disabled]):hover, .menubutton .arrow:not([disabled]):hover {
	border-top: 5px solid var(--color-text-darker);
}

.arrowbackground {
	box-sizing: border-box;
	width: 16px;
	height: 100%;
	display: flex;
	align-items: center;
	border-left: 1px solid transparent;
	background-color: transparent;
	grid-column: 3;
	position: relative;
	border: none;
	padding: 1px;
}

.arrowbackground:hover {
	border-left-color: transparent;
	background-color: var(--color-background-darker);
}

.menubutton:not(.splitbutton) .arrowbackground,
.menubutton:not(.splitbutton) .arrowbackground:hover {
	border-left-color: transparent;
	background-color: transparent;
}

.unoarrow:not([disabled]):hover, .arrowbackground:not([disabled]):hover .unoarrow {
	border-top-color: var(--color-text-darker);
}

/* menu button */
.jsdialog.menubutton {
	box-sizing: border-box;
	line-height: normal;
	font-size: calc(var(--default-font-size)*1.2);
	font-family: var(--cool-font);
	border: 1px solid var(--color-border-dark);
	border-radius: var(--border-radius);
	padding: 8px 10px;
	margin: 2px 0px;
	background-color: var(--color-background-dark);
	display: flex;
	align-items: center;
	justify-content: center;
}

.jsdialog.menubutton img {
	margin-inline-end: 4px;
}

[data-userinterfacemode='classic'] #toolbar-wrapper .jsdialog.menubutton img {
	margin-inline-end: 0;
}

button.menubutton.sidebar > span {
	box-shadow: none !important;
	font-size: var(--default-font-size) !important;
}

.jsdialog .unobutton img {
	width: var(--btn-img-size);
	height: var(--btn-img-size);
}

button.has-img img {
	min-width: 16px;
	min-height: 16px;
}

.menubutton .arrow {
	display: table-cell !important;
	float: right;
	margin: 5px 0 0 5px;
}

.jsdialog.menubutton[disabled] {
	background-color: transparent !important;
	color: var(--color-text-lighter) !important;
}

.jsdialog.menubutton[disabled] .arrow {
	border-top-color: var(--color-text-lighter);
}

/* toolbox */
.jsdialog.toolbox {
	display: flex;
}

.jsdialog.ui-spacer {
	display: flex;
	flex-grow: 1;
}

/* spinner */
.spinner {
	border: 6px solid #f3f3f3; /* Light grey */
	border-top: 6px solid grey; /* Blue */
	border-radius: 50%;
	width: 30px;
	height: 30px;
	animation: spin 2s linear infinite;
}

@keyframes spin {
	0% { transform: rotate(0deg); }
	100% { transform: rotate(360deg); }
}

/* color picker */
.ui-color-picker {
	padding: 4px;
}

.ui-color-picker-header {
	display: grid;
	grid-template-columns: auto 1fr;
	align-items: center;
	gap: 8px;
}

.ui-color-picker,
#ui-color-picker-custom,
#ui-color-picker-recent {
	display: grid;
	grid-gap: 4px;
	align-items: center;
}

.ui-color-picker-palette {
	display: grid;
	grid-gap: 4px;
	margin-top: 3px;
}

.ui-color-picker-entry {
	border: 1px solid transparent;
	cursor: pointer;
	width: 24px;
	height: 24px;
	appearance: none;
	webkit-appearance: none;
	margin: 0;
}

.ui-color-picker-entry:hover,
.ui-color-picker-entry:focus-visible {
	outline: 2px solid var(--color-primary);
	outline-offset: 1px;
}

#ui-color-picker-custom,
#ui-color-picker-recent {
	grid-auto-flow: column;
}
/* ... */

